// Copyright 2020 Grafana Labs
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package worldping;

option go_package = "worldping";

import "google/protobuf/empty.proto";
import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

service Checks {
	// GetChanges returns a list of check operations, specifying
	// whether to add, update or delete checks.
	rpc GetChanges(google.protobuf.Empty) returns (stream CheckChange) {};
}

enum CheckOperation {
	ADD    = 0;
	UPDATE = 1;
	DELETE = 2;
}

message CheckChange {
	CheckOperation operation = 1;
	Check          check     = 2 [(gogoproto.nullable) = false];
}

// Check represents a check.
//
// The "settings" field defines the type of check.
message Check {
	int64           id        = 1  [(gogoproto.jsontag) = "id"];         // unique ID
	int64           orgId     = 2  [(gogoproto.jsontag) = "org_id"];     // grafana.com org ID
	int64           frequency = 3  [(gogoproto.jsontag) = "frequency"];  // every X milliseconds
	int64           offset    = 4  [(gogoproto.jsontag) = "offset"];     // ??? REMOVE???? ??? why user configured?
	int64           timeout   = 5  [(gogoproto.jsontag) = "timeout"];    // maximum time before aborting
	bool            enabled   = 6  [(gogoproto.jsontag) = "enabled"];    // user enable/disable   
	repeated string tags      = 7  [(gogoproto.jsontag) = "tags"];       // Custom labels applied to all lables (ie: production)
	CheckSettings   settings  = 8  [(gogoproto.nullable) = false, (gogoproto.jsontag) = "settings"];
	int64           created   = 9  [(gogoproto.jsontag) = "created"]; // time the check was created
	int64           modified  = 10 [(gogoproto.jsontag) = "modified"]; // last time modified
}

// CheckSettings provides the settings for exactly one type of check.
message CheckSettings {
	option (gogoproto.onlyone) = true;
	PingSettings ping  = 1 [(gogoproto.jsontag) = "ping,omitempty"];
	HttpSettings http  = 2 [(gogoproto.jsontag) = "http,omitempty"];
	DnsSettings  dns   = 3 [(gogoproto.jsontag) = "dns,omitempty"];
}

// PingSettings provides the settings for a ping check.
//
// "hostname" is the hostname to check.
// "ipVersion" is the IP version to use for name resolution.
//
// The "validation" field provides the validations to be performed on
// the result, for example, the ping time must be below a particular
// threshold.
message PingSettings {
	string                       hostname   = 1 [(gogoproto.jsontag) = "hostname"];
	IpVersion                    ipVersion  = 2 [(gogoproto.jsontag) = "ip_version"];
	repeated PingCheckValidation validation = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "validation"];
}

enum HttpMethod {
	GET     = 0;
	HEAD    = 1;
	POST    = 2;
	OPTIONS = 3;
}

// HttpSettings provides the settings for a HTTP check.
message HttpSettings {
	string                        url           = 1 [(gogoproto.jsontag) = "url"];
	HttpMethod                    method        = 2 [(gogoproto.jsontag) = "method"];
	repeated string               headers       = 3 [(gogoproto.jsontag) = "headers"];
	string                        body          = 4 [(gogoproto.jsontag) = "body"];
	int64                         downloadLimit = 5 [(gogoproto.jsontag) = "download_limit"];
	IpVersion                     ipVersion     = 6 [(gogoproto.jsontag) = "ip_version"];
	bool                          validateCert  = 7 [(gogoproto.jsontag) = "validate_cert"];
	repeated HttpCheckValidations validation    = 8 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "validation"];
}

enum DnsRecordType {
	A     = 0;
	AAAA  = 1;
	CNAME = 2;
	MX    = 3;
	NS    = 4;
	PTR   = 5;
	SOA   = 6;
	SRV   = 7;
	TXT   = 8;
}

enum DnsProtocol {
	TCP = 0;
	UDP = 1;
}

// DnsSettings provides the settings for a DNS check.
message DnsSettings {
	string                      name       = 1 [(gogoproto.jsontag) = "name"];
	DnsRecordType               recordType = 2 [(gogoproto.jsontag) = "record_type"];
	string                      server     = 3 [(gogoproto.jsontag) = "server"];
	IpVersion                   ipVersion  = 4 [(gogoproto.jsontag) = "ip_version"];
	DnsProtocol                 protocol   = 5 [(gogoproto.jsontag) = "protocol"];
	int32                       port       = 6 [(gogoproto.jsontag) = "port"];
	repeated DNSCheckValidation validation = 7 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "validation"];
}

enum IpVersion {
	Any = 0;
	V4  = 1;
	V6  = 2;
}

enum ValidationMethod {
	Regex        = 0;
	IncludesText = 1;
	ExcludesText = 2;
	ExactMatch   = 3;
}

enum ValidationSeverity {
	Warning  = 0;
	Critical = 1;
}

message ResponseTimeValidation {
	int32              threshold = 1 [(gogoproto.jsontag) = "threshold"]; // Max milliseconds
	ValidationSeverity severity  = 2 [(gogoproto.jsontag) = "severity"];  // what level
}

message HttpCheckValidations {
	option (gogoproto.onlyone) = true;
	HttpHeaderValidation   header       = 1 [(gogoproto.jsontag) = "header,omitempty"];
	HttpBodyValidation     body         = 2 [(gogoproto.jsontag) = "body,omitempty"];
	ResponseTimeValidation responseTime = 3 [(gogoproto.jsontag) = "response_time,omitempty"];
}

message HttpHeaderValidation {
	string             header   = 1 [(gogoproto.jsontag) = "header"];
	ValidationMethod   method   = 2 [(gogoproto.jsontag) = "method"];
	string             value    = 3 [(gogoproto.jsontag) = "value"];
	ValidationSeverity severity = 4 [(gogoproto.jsontag) = "severity"];
}

message HttpBodyValidation {
	ValidationMethod   method   = 1 [(gogoproto.jsontag) = "method"];
	string             value    = 2 [(gogoproto.jsontag) = "value"];
	ValidationSeverity severity = 3 [(gogoproto.jsontag) = "severity"];
}

message DNSCheckValidation {
	option (gogoproto.onlyone) = true;
	DnsTtlValidation       ttl          = 1 [(gogoproto.jsontag) = "ttl,omitempty"];
	DnsTextValidation      text         = 2 [(gogoproto.jsontag) = "text,omitempty"];
	DnsHostValidation      host         = 4 [(gogoproto.jsontag) = "host,omitempty"];
	ResponseTimeValidation responseTime = 3 [(gogoproto.jsontag) = "response_time,omitempty"];
}

message DnsTtlValidation {
	// always less or equal
	string             name     = 1 [(gogoproto.jsontag) = "name"];
	int32              value    = 2 [(gogoproto.jsontag) = "value"]; // Maximum value (must be under)
	ValidationSeverity severity = 3 [(gogoproto.jsontag) = "severity"];
}

message DnsTextValidation { // always less or equal
	ValidationMethod   method   = 1 [(gogoproto.jsontag) = "method"];
	string             value    = 2 [(gogoproto.jsontag) = "value"]; 
	ValidationSeverity severity = 3 [(gogoproto.jsontag) = "severity"];
}

message DnsHostValidation { // must match all entries
	repeated string    host     = 1 [(gogoproto.jsontag) = "host"];
	ValidationSeverity severity = 2 [(gogoproto.jsontag) = "severity"];
}

message PingCheckValidation {
	option (gogoproto.onlyone) = true;
	ResponseTimeValidation responseTime = 1 [(gogoproto.jsontag) = "response_time,omitempty"];
}
